[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clui-base = {path = "../clui-base"}
clui-layout = {path = "../clui-layout"}
rafx-api = { version = "0.0.14" ,features=["rafx-vulkan"]}
env_logger = "0.9.0"
log = "0.4"
winit = "0.26.0"

[features]
rafx-vulkan = ["rafx-api/rafx-vulkan"]